# GDGuesser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml  release.yml
cmake/: FindAsio.cmake
server/: .env.example  .gitignore  package.json  tsconfig.json
server/migrations/: 001-initial.sql  002-accuracy.sql  003-icons.sql  004-new-order.sql  005-guess-history.sql  006-guess-modes.sql
server/src/: main.ts  shared.ts
server/src/multiplayer/: mp.ts  server.ts
src/: main.cpp
src/hooks/: HookedCCScene.cpp  HookedCCScene.hpp  HookedCustomSongWidget.cpp  HookedCustomSongWidget.hpp  HookedEndLevelLayer.cpp  HookedEndLevelLayer.hpp  HookedPauseLayer.cpp  HookedPauseLayer.hpp
src/managers/: Enums.hpp  GuessManager.cpp  GuessManager.hpp  types.hpp
src/managers/net/: client.hpp  manager.cpp  manager.hpp  server.hpp
src/ui/: AccountPopup.cpp  AccountPopup.hpp  GuessPopup.cpp  GuessPopup.hpp  NumberInput.cpp  NumberInput.hpp  ResultsPopup.cpp  ResultsPopup.hpp  StartPopup.cpp  StartPopup.hpp
src/ui/duels/: DuelsPersistentNode.cpp  DuelsPersistentNode.hpp  DuelsPopup.cpp  DuelsPopup.hpp  DuelsResultsPopup.cpp  DuelsResultsPopup.hpp  DuelsStartPopup.cpp  DuelsStartPopup.hpp  DuelsWinLayer.cpp  DuelsWinLayer.hpp
src/ui/layers/: LeaderboardLayer.cpp  LeaderboardLayer.hpp  LevelLayer.cpp  LevelLayer.hpp  LoadingOverlayLayer.cpp  LoadingOverlayLayer.hpp
